# src/routes/index.js
@@ -1,11 +1,13 @@
 import express from 'express';
 import usuarioRoutes from './usuario.route.js';
 import candidaturaRoutes from './candidatura.route.js';
+import vagaRoutes from './vaga.route.js';
 
 const router = express.Router();
 
 router.use('/usuarios', usuarioRoutes);
 router.use('/candidaturas', candidaturaRoutes);
+router.use('/vagas', vagaRoutes);
 
 export default router;
 // Aqui você pode adicionar outras rotas principais do seu aplicativo
